[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "polar-code-bsc"
version = "0.1.0"
description = "Polar code encoder/decoder for arbitrary block lengths N=2^k over a BSC channel."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Codex" }
]

[project.scripts]
polar-code = "polar_code.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

